--- a/docs/faststore/components/features/delivery-promise/components.mdx
+++ b/docs/faststore/components/features/delivery-promise/components.mdx
@@ -4,13 +4,11 @@ title: "Delivery Promise components"
 
 This guide outlines the main components related to the Delivery Promise feature for FastStore. It details the structure of these elements and emphasizes the customizations required when altering standard sections, such as `NavBar` and `ProductGallery`.
 
-You'll understand which components are reusable and which need to be customized, illustrating the connection between native implementation and customized modifications.
-
-Delivery Promise introduces a set of modular components and hooks. These are structured in the FastStore core and UI packages, and are inserted into key sections. This guide focuses on the core components provided by the `@faststore/core` package, which are included by default in the FastStore source code, including the FastStore starter.
-
-Learn more about the packages in [Understanding the project structure](https://developers.vtex.com/docs/guides/faststore/project-structure-overview#packagejson).
+You'll understand which components are reusable and which need to be customized, illustrating the connection between native implementation and customizations.
 
 ## Components
+
+Delivery Promise introduces a set of modular components and hooks. These are structured in the FastStore core and UI packages, and are inserted into key sections. This guide focuses on the core components provided by the `@faststore/core` package, which are included by default in the FastStore source code, including the FastStore starter. Learn more about the packages in [Understanding the project structure](https://developers.vtex.com/docs/guides/faststore/project-structure-overview#packagejson).
 
 Below are the core components related to the Delivery Promise feature in FastStore.
 
