--- a/docs/faststore/components/features/delivery-promise/overview.mdx
+++ b/docs/faststore/components/features/delivery-promise/overview.mdx
@@ -14,16 +14,17 @@ This guide explains how the solution operates, covering:
 * [Filter options](#filter-options): Learn how shoppers can filter products by delivery or pickup methods.
 * [Location priority](#location-priority): Understand the order and logic used to determine the shopper's location for accurate delivery estimates.
 
-To learn how to implement Delivery Promise in your store, see the guide [Implementing Delivery Promise](https://developers.vtex.com/docs/guides/faststore/features-delivery-promise-implementation).
+>⚠️ To learn how to implement Delivery Promise in your store, see the guide [Implementing Delivery Promise](https://developers.vtex.com/docs/guides/faststore/features-delivery-promise-implementation).
+
 
 ## Hooks
 
 This feature introduces the following hooks as part of the regionalization and location workflow:
 
-* `useGeoLocation`: Uses the browser's geolocation API or other client-side methods to autodetect the user's location when not provided.
+* `useGeoLocation`: Uses the browser's geolocation API or other client-side methods to auto-detect the user's location when not provided.
 * `useRegion`: Accesses or updates the user's region information, such as postal code or location, and manages region validation flows.
 * `useRegionModal`: Handles modal display logic for region selection, especially when the location input is mandatory.
-* `useDeliveryPromise`: Manages all logic for querying, displaying, and updating delivery-availability filters and states.
+* `useDeliveryPromise`: Manages all logic for querying, displaying, and updating delivery availability filters and states.
 
 ## Filter options
 
