--- a/docs/faststore/components/features/delivery-promise/overview.mdx
+++ b/docs/faststore/components/features/delivery-promise/overview.mdx
@@ -16,7 +16,6 @@ This guide explains how the solution operates, covering:
 
 >⚠️ To learn how to implement Delivery Promise in your store, see the guide [Implementing Delivery Promise](https://developers.vtex.com/docs/guides/faststore/features-delivery-promise-implementation).
 
-
 ## Hooks
 
 This feature introduces the following hooks as part of the regionalization and location workflow:
@@ -52,9 +51,9 @@ Shoppers can filter available products globally **by shipping** or **by store**.
 
 In PLPs or search pages, the shopper may have the following options to filter:
 
-* **Deliver:** Displays available products according to the shopper's location.
+* **Deliver to:** Displays available products according to the shopper's location.
 * **Pickup at:** Displays the store set in the global pickup point filter, or the one closest to the shopper's location. To change the store set in `Pickup at {storeName}`, the shopper may click it and select a new store in the modal that will open. It shows all available pickup points within a 50 km pickup radius configured in Checkout. The number of pickup points displayed is unlimited.
-* **Pickup nearby:** Displays products available for pickup at nearby stores. It shows up to 40 pickup points within 10-km of the shopper’s location.
+* **Pickup nearby:** Displays products available for pickup at nearby stores. It shows up to 40 pickup points within 10 km of the shopper’s location.
 * **Pickup anywhere:** Displays products available for pickup at any participating store within the merchant’s network, rather than restricting results to a selected pickup location or geographic proximity. **It's mainly used by B2B stores**.
 
 ![plp-search](https://vtexhelp.vtexassets.com/assets/docs/src/plp-search___a8cfec375f28a7849ebe47ac886b5869.png)
