--- a/docs/faststore/components/atoms/button.mdx
+++ b/docs/faststore/components/atoms/button.mdx
@@ -812,7 +812,7 @@ export function Example() {
 
 Use the `Button` component to communicate user actions on the following components:
 
-- `Buy now` and `Add to cart` buttons on [Product Cards](https://developers.vtex.com/docs/guides/faststore/molecules-product-card).
+- `Buy Now` and `Add to Cart` buttons on [Product Cards](https://developers.vtex.com/docs/guides/faststore/molecules-product-card).
 - Submit and/or cancel actions on [Modal](https://developers.vtex.com/docs/guides/faststore/molecules-modal) windows.
 
 ---
@@ -844,7 +844,7 @@ For further customization, you can use the following data attributes:
 - Place the buttons in an **order that reflects a conversation between the user and the system**.
 - Provide visual or audio **feedback on interactions**. Whenever a user interacts with a button, the button should change its state and let the user know that something is happening as a consequence.
 - Define a style system for your **button states** (i.e., normal, focus, hover, active, pressed, disabled).
-- Use icon-only buttons only for widespread actions with highly standardized icons, such as a cross for close.
+- Use icon-only buttons only for widespread actions with highly standardized icons, such as a cross for closing.
 - Use the `aria-label` attribute to provide a textual alternative for icon-only buttons.
 
 ### ❌ Don'ts
