--- a/docs/faststore/docs/faststore-api/configuring-graphql-cache-control.mdx
+++ b/docs/faststore/docs/faststore-api/configuring-graphql-cache-control.mdx
@@ -4,7 +4,7 @@ title: 'Configuring GraphQL cache control for `GET` requests'
 
 > ⚠ This is an experimental feature.
 
-This guide explains how to configure caching for GraphQL `GET` requests using the `graphqlCacheControl` flag. Setting cache rules allows responses to be stored and reused for subsequent requests, reducing server load and improving store performance. For example, caching a product listing page (such as "Summer Collection") for five minutes allows the page to load faster for store visitors. The system serves cached content immediately, then updates it in the background, ensuring fresh results without slowing down the user experience, improving performance, and minimizing additional server load.
+This guide explains how to configure caching for GraphQL `GET` requests using the `graphqlCacheControl` flag. Setting cache rules allows responses to be stored and reused for subsequent requests, reducing server load and improving store performance. For example, caching a product listing page (such as "Summer Collection") for five minutes allows the page to load faster for store visitors. The system serves cached content immediately, then updates it in the background, which further ensures a seamless user experience and minimizes additional server load.
 
 The `graphqlCacheControl` flag defines how long responses should be stored and reused when caching for GraphQL `GET` requests.
 
@@ -16,7 +16,7 @@ Make sure that your project is using the latest version of the @faststore/cli pa
 
 ## Instructions
 
-Since the `graphqlCacheControl` flag is an experimental feature, declare it under the `experimental` section in the `discovery.config.js` file.
+Declare the `graphqlCacheControl` flag in the `experimental` section of the `discovery.config.js` file.
 
 1. Open your FastStore project in a code editor.
 2. Open the `discovery.config.js` file.
@@ -29,24 +29,24 @@ Since the `graphqlCacheControl` flag is an experimental feature, declare it unde
     },
     ```
 
-4. Inside the `graphqlCacheControl` flag, add the `maxAge` and `staleWhileRevalidate` objects and their values:
+4. Inside `graphqlCacheControl`, add the `maxAge` and `staleWhileRevalidate` properties and their values:
 
     ```js discovery.config.js
     experimental: {
         …
         graphqlCacheControl: {
-        maxAge: 5 * 60, // 0 disables cache, 5 * 60 enable cache control maxAge 5 minutes
+        maxAge: 5 * 60, // 0 disables cache, 5 * 60 sets maxAge to 5 minutes.
         staleWhileRevalidate: 60,
         },
     },
     ```
 
-    In the example above the `maxAge` and `staleWhileRevalidate` objects received the following values:
+    In the example above, the `maxAge` and `staleWhileRevalidate` properties received the following values:
 
     | Object    | Description     |
     | --------- | --------------- |
-    | `maxAge: 5 * 60` | Defines how long response stays fresh in cache. <ul><li>Responses are cached for 5 minutes (300 seconds).</li><li>After 5 minutes, the cache is considered `stale`.</li><li>`maxAge: 0` - The `0` value disables caching entirely.</li></ul> |
-    | `staleWhileRevalidate: 60` | Defines how long stale cache can be used while new data fetches in the background. <ul><li>After the initial 5 minutes (when `maxAge expires`), stale cached data can still be served for up to 1 extra minute (60 seconds) while the system fetches fresh data in the background.</li><li>This ensures users see slightly older data (for 1 minute maximum) instead of waiting for a full reload.</li></ul> |
+    | `maxAge: 5 * 60` | Defines how long response stays fresh in cache. <ul><li>Responses are cached for 5 minutes (300 seconds).</li><li>After 5 minutes, the cache is considered `stale`.</li><li>`maxAge: 0` - A `0` value disables caching entirely.</li></ul> |
+    | `staleWhileRevalidate: 60` | Defines how long stale cache can be used while new data is feched in the background. <ul><li>After the initial 5 minutes (when `maxAge expires`), stale cached data can still be served for up to one extra minute (60 seconds) while the system fetches fresh data in the background.</li><li>This ensures users see slightly older data (for 1 minute maximum) instead of waiting for a full reload.</li></ul> |
 
     This configuration creates a tiered caching system that balances immediate performance and data freshness. See in the table below what happens over time:
 
@@ -73,7 +73,7 @@ To ensure proper caching behavior for your custom queries, they must use the `GE
 
 After enabling the `graphqlCacheControl` flag in the `discovery.config.js` file and running `yarn dev` in a terminal, follow these steps to test the cache configuration:
 
-1. Open the localhost path available in the terminal to view the store preview (example: `http://localhost:3000/`).
+1. Open the localhost URL available in the terminal to view the store preview (example: `http://localhost:3000/`).
 2. On the store preview page, open your browser's **Developer Tools**.
 3. Go to the **Network** tab and look for the **Cache-Control** column as displayed in the image below:
    ![cache-hit](https://vtexhelp.vtexassets.com/assets/docs/src/graphql-cache-control-flag-localhost___70d2f2c3fbf40846180c7c0ed11d16f0.png)
