--- a/docs/faststore/docs/faststore-api/configuring-graphql-cache-control.mdx
+++ b/docs/faststore/docs/faststore-api/configuring-graphql-cache-control.mdx
@@ -8,11 +8,11 @@ This guide explains how to configure caching for GraphQL `GET` requests using th
 
 The `graphqlCacheControl` flag defines how long responses should be stored and reused when caching for GraphQL `GET` requests.
 
-> ℹ POST requests are excluded from caching by default. This ensures that data sent in the request body, such as user input or sensitive information, is always processed in real time and not served from the cache.
+> ℹ `POST` requests are excluded from caching by default. This ensures that data sent in the request body, such as user input or sensitive information, is always processed in real time and not served from the cache.
 
 ## Before you begin
 
-Make sure that your project is using the latest version of the @faststore/cli package. To do so, follow the instructions in [Updating the '@faststore/cli' package version](https://developers.vtex.com/docs/guides/faststore/project-structure-updating-the-cli-package-version).
+Make sure that your project is using the latest version of the `@faststore/cli` package. To do so, follow the instructions in [Updating the '@faststore/cli' package version](https://developers.vtex.com/docs/guides/faststore/project-structure-updating-the-cli-package-version).
 
 ## Instructions
 
@@ -48,13 +48,13 @@ Declare the `graphqlCacheControl` flag in the `experimental` section of the `dis
     | `maxAge: 5 * 60` | Defines how long response stays fresh in cache. <ul><li>Responses are cached for 5 minutes (300 seconds).</li><li>After 5 minutes, the cache is considered `stale`.</li><li>`maxAge: 0` - A `0` value disables caching entirely.</li></ul> |
     | `staleWhileRevalidate: 60` | Defines how long stale cache can be used while new data is feched in the background. <ul><li>After the initial 5 minutes (when `maxAge expires`), stale cached data can still be served for up to one extra minute (60 seconds) while the system fetches fresh data in the background.</li><li>This ensures users see slightly older data (for 1 minute maximum) instead of waiting for a full reload.</li></ul> |
 
-    This configuration creates a tiered caching system that balances immediate performance and data freshness. See in the table below what happens over time:
+    This configuration creates a tiered caching system that balances immediate performance and data freshness. See in the table below for what happens over time:
 
     | **Object** | **Cache state** | **Behavior** |
     | ------ | ----------- | -------- |
     | 0s - 300s  | Fresh | <ul><li>Serves cached responses instantly.</li><li>No backend requests unless it's the first request.</li></ul> |
-    | 300 s - 360 s  | Stale | <ul><li>Serves old data while fetching updates.</li><li>Simultaneously fetches fresh data in background.</li></ul> |
-    | After 360 s  | Expired | <ul><li>Cache fully expires.</li><li>Next request triggers a fresh data fetch.</li></ul> |
+    | 300s - 360s  | Stale | <ul><li>Serves old data while fetching updates.</li><li>Simultaneously fetches fresh data in background.</li></ul> |
+    | After 360s  | Expired | <ul><li>Cache fully expires.</li><li>Next request triggers a fresh data fetch.</li></ul> |
 
 5. Open a terminal and run `yarn dev` to sync the changes and [testing the cache configuration](#testing-the-cache-configuration).
 
