--- a/docs/faststore/docs/faststore-api/configuring-graphql-cache-control.mdx
+++ b/docs/faststore/docs/faststore-api/configuring-graphql-cache-control.mdx
@@ -56,7 +56,7 @@ Declare the `graphqlCacheControl` flag in the `experimental` section of the `dis
     | 300s - 360s  | Stale | <ul><li>Serves old data while fetching updates.</li><li>Simultaneously fetches fresh data in background.</li></ul> |
     | After 360s  | Expired | <ul><li>Cache fully expires.</li><li>Next request triggers a fresh data fetch.</li></ul> |
 
-5. Open a terminal and run `yarn dev` to sync the changes and [testing the cache configuration](#testing-the-cache-configuration).
+5. Open a terminal and run `yarn dev` to sync the changes and [test the cache configuration](#testing-the-cache-configuration).
 
 ## Ensuring custom queries are cacheable
 
