--- a/docs/faststore/docs/faststore-api/configuring-graphql-cache-control.mdx
+++ b/docs/faststore/docs/faststore-api/configuring-graphql-cache-control.mdx
@@ -4,7 +4,7 @@ title: 'Configuring GraphQL cache control for `GET` requests'
 
 > ⚠ This is an experimental feature.
 
-This guide explains how to configure caching for GraphQL `GET` requests using the `graphqlCacheControl` flag. Setting cache rules allows responses to be stored and reused for subsequent requests, reducing server load and improving store performance. For example, caching a product listing page (such as "Summer Collection") for five minutes allows the page to load faster for store visitors. The system serves cached content immediately, then updates it in the background, further ensuring a seamless user experience and minimizes additional server load.
+This guide explains how to configure caching for GraphQL `GET` requests using the `graphqlCacheControl` flag. Setting cache rules allows responses to be stored and reused for subsequent requests, reducing server load and improving store performance. For example, caching a product listing page (such as "Summer Collection") for five minutes allows the page to load faster for store visitors. The system serves cached content immediately, then updates it in the background, further ensuring a seamless user experience and minimizing additional server load.
 
 The `graphqlCacheControl` flag defines how long responses should be stored and reused when caching for GraphQL `GET` requests.
 
@@ -48,11 +48,11 @@ Declare the `graphqlCacheControl` flag in the `experimental` section of the `dis
     | `maxAge: 5 * 60` | Defines how long responses stay fresh in cache. <ul><li>Responses are cached for 5 minutes (300 seconds).</li><li>After 5 minutes, the cache is considered `stale`.</li><li>`maxAge: 0` - A value of `0` disables caching entirely.</li></ul> |
     | `staleWhileRevalidate: 60` | Defines how long stale cached data can be used while new data is fetched in the background. <ul><li>After the initial 5 minutes (when `maxAge expires`), stale cached data can still be served for up to one extra minute (60 seconds) while the system fetches fresh data in the background.</li><li>This ensures users see slightly older data (for 1 minute maximum) instead of waiting for a full reload.</li></ul> |
 
-    This configuration creates a tiered caching system that balances immediate performance and data freshness. The table below illustrates what happens over time:
+    This configuration creates a tiered caching system that balances immediate performance with data freshness. The table below illustrates what happens over time:
 
     | **Object** | **Cache state** | **Behavior** |
     | ------ | ----------- | -------- |
-    | 0s - 300s  | Fresh | <ul><li>Serves cached responses instantly.</li><li>No backend requests unless it's the first request.</li></ul> |
+    | 0s - 300s  | Fresh | <ul><li>Serves cached responses instantly.</li><li>No backend requests unless it is the first request.</li></ul> |
     | 300s - 360s  | Stale | <ul><li>Serves old data while fetching updates.</li><li>Simultaneously fetches fresh data in background.</li></ul> |
     | After 360s  | Expired | <ul><li>Cache fully expires.</li><li>Next request triggers a fresh data fetch.</li></ul> |
 
