Delivery Promise: Add card in Storefront Features overview doc

--- a/docs/faststore/components/storefront-features/overview.mdx
+++ b/docs/faststore/components/storefront-features/overview.mdx
@@ -52,3 +52,12 @@ Storefront features are solutions that help you implement ecommerce functionalit
   />
 
 </Flex>
+
+  <WhatsNextCard
+  title="Delivery Promise (Beta)"
+  description="Provide accurate delivery estimations and show only products that can be delivered or picked up based on customer location."
+  linkTo="https://developers.vtex.com/docs/guides/faststore/storefront-features-delivery-promise"
+  linkTitle="See more"
+  />
+
+</Flex>
