Apply suggestions from code review
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/docs/faststore/components/atoms/button.mdx
+++ b/docs/faststore/components/atoms/button.mdx
@@ -876,9 +876,9 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 ## Use Cases
 
-Use the `Button` component to communicate user actions on the following components:
+Use the `Button` component to communicate user actions for the following components:
 
-- `Buy Now` and `Add to Cart` buttons on [Product Cards](https://developers.vtex.com/docs/guides/faststore/molecules-product-card).
+- `Buy Now` and `Add to Cart` buttons in [Product Cards](https://developers.vtex.com/docs/guides/faststore/molecules-product-card).
 - Submit and/or cancel actions on [Modal](https://developers.vtex.com/docs/guides/faststore/molecules-modal) windows.
 
 ---
