Fix typos and hyperlinks

--- a/docs/faststore/components/atoms/button.mdx
+++ b/docs/faststore/components/atoms/button.mdx
@@ -904,7 +904,7 @@ For further customization, you can use the following data attributes:
 ### ✅ Do's
 
 - Use standard button designs and shapes to make your button **look clickable**.
-- Use styles to **communicate the importance of an action** by visually differentiating Primary and Secondary buttons.
+- Use styles to **communicate the importance of an action** by visually differentiating [primary](#primary) and [secondary](#secondary) buttons.
 - Make buttons **finger-friendly** for mobile users and large enough for **reliable interactions**. Generally, touch targets are at least 44 by 44 CSS pixels.
 - Use **task-specific** words to write button labels.
 - Place the buttons in an **order that reflects a conversation between the user and the system**.
@@ -919,10 +919,10 @@ For further customization, you can use the following data attributes:
 - Don't rely on icons to communicate complex actions.
 - Don't use generic words that can potentially confuse users.
 - Avoid cluttering the UI with too many buttons.
-- Avoid having more than one Primary action button on the screen at a time.
+- Avoid having more than one primary action button on the screen at a time.
 - Avoid using disabled buttons, if possible. Instead, give preference to hiding the unavailable option.
-- Don't place buttons next to [Badges](https://developers.vtex.com/docs/guides/faststore/atoms-badge). Although badges and buttons are similar in appearance, badges are not interactive and may confuse users if not used in the proper context.
-- Don't use Buttons as [Links](https://developers.vtex.com/docs/guides/faststore/atoms-link). Links are not intended to invite users to take action. Instead, they redirect users somewhere.
+- Don't place buttons next to [badges](https://developers.vtex.com/docs/guides/faststore/atoms-badge). Although badges and buttons are similar in appearance, badges are not interactive and may confuse users if not used in the proper context.
+- Don't use buttons as [Links](https://developers.vtex.com/docs/guides/faststore/atoms-link). Links are not intended to invite users to take action. Instead, they redirect users somewhere.
 - Avoid using `aria-label` when the button already has a label.
 
 ---
