Apply suggestions from code review
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/docs/faststore/components/atoms/button.mdx
+++ b/docs/faststore/components/atoms/button.mdx
@@ -908,7 +908,7 @@ For further customization, you can use the following data attributes:
 - Make buttons **finger-friendly** for mobile users and large enough for **reliable interactions**. Generally, touch targets are at least 44 by 44 CSS pixels.
 - Use **task-specific** words to write button labels.
 - Place the buttons in an **order that reflects a conversation between the user and the system**.
-- Provide visual or audio **feedback on interactions**. Whenever a user interacts with a button, the button should change its state and let the user know that something is happening as a consequence.
+- Provide visual or audio **feedback on interactions**. Whenever a user interacts with a button, it should change its state to indicate that an action is taking place.
 - Define a style system for your **button states** (i.e., normal, focus, hover, active, pressed, disabled).
 - Use icon-only buttons only for widespread actions with highly standardized icons, such as a cross for closing.
 - Use the `aria-label` attribute to provide a textual alternative for icon-only buttons.
