--- a/docs/faststore/components/atoms/button.mdx
+++ b/docs/faststore/components/atoms/button.mdx
@@ -22,7 +22,7 @@ Buttons indicate actions that users can take, such as adding an item to the cart
       <Button variant="secondary">Secondary</Button>
       <Button variant="tertiary">Tertiary</Button>
       <Button variant="primary" icon={<Icon name="ShoppingCart" />} iconPosition="left">
-        {'Button w/ Icon'}
+        {'Button with an Icon'}
       </Button>
       <Button variant="primary" icon={<Icon name="ShoppingCart" />} size="small">
         {'Small'}
@@ -35,7 +35,7 @@ Buttons indicate actions that users can take, such as adding an item to the cart
     <Button variant="secondary">Secondary</Button>
     <Button variant="tertiary">Tertiary</Button>
     <Button variant="primary" icon={<Icon name="ShoppingCart" />} iconPosition="left">
-      Button w/ Icon
+      Button with an Icon
     </Button>
     <Button variant="primary" size="small">
       Small
