--- a/docs/faststore/components/atoms/button.mdx
+++ b/docs/faststore/components/atoms/button.mdx
@@ -901,7 +901,7 @@ For further customization, you can use the following data attributes:
 
 ## Best Practices
 
-### ✅ Do's
+### ✅ Dos
 
 - Use standard button designs and shapes to make your button **look clickable**.
 - Use styles to **communicate the importance of an action** by visually differentiating [primary](#primary) and [secondary](#secondary) buttons.
