fix(overview.mdx): removing 'filter by shipping'

--- a/docs/faststore/components/features/delivery-promise/overview.mdx
+++ b/docs/faststore/components/features/delivery-promise/overview.mdx
@@ -35,15 +35,9 @@ Delivery Promise offers shoppers two product filtering options:
 
 ### Global filters
 
-Global filters determine the fulfillment method for all user navigation and are applied to all product searches until they change or are cleared.
+Global filters remain active across all user navigation and are applied to all product searches until they change or are cleared.
 
-Shoppers can filter available products globally **by shipping** or **by store**.
-
-* **Filter by shipping:** Allows shoppers to select between delivery and pickup as a fulfillment method.
-
-![filter-by-shipping](https://vtexhelp.vtexassets.com/assets/docs/src/filter-by-shipping___040d93770d3280239260a2a02b8e3b67.png)
-
-* **Filter by store:** Allows shoppers to filter products to display only those available for pickup at a specific store. It shows all available pickup points within a 50-km pickup radius configured in Checkout. The number of pickup points displayed is unlimited.
+Shoppers can filter available products globally using the **Filter by store**, which displays only products available for pickup at a specific store. It shows all available pickup points within a 50 km pickup radius configured in Checkout. The number of pickup points displayed is unlimited.
 
 ![filter-by-store](https://vtexhelp.vtexassets.com/assets/docs/src/filter-by-store___d79c9efc5c4391247bf9b67403911987.png)
 
@@ -90,4 +84,5 @@ graph LR
 
     H -- No --> N(["Display products without using Delivery Promise"])
 ```
+
 
