--- a/docs/faststore/docs/security/managing-secrets.mdx
+++ b/docs/faststore/docs/security/managing-secrets.mdx
@@ -66,7 +66,7 @@ The secret created will be available in the **Current Keys** section.
 ### Deleting secrets
 
 1. Go to the `Current Keys` section.
-2. Next to the secret you need to update, click `⋮` and then click `Delete`.
+2. Next to the secret you need to delete, click `⋮` and then click `Delete`.
 3. Confirm the secret you want to remove.
 
    >⚠ This action can't be undone.
