Apply suggestions from grammar review
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/docs/guides/vtex-io/GraphQL/developing-a-graphql-api-in-service-apps.mdx
+++ b/docs/guides/vtex-io/GraphQL/developing-a-graphql-api-in-service-apps.mdx
@@ -43,7 +43,7 @@ sequenceDiagram
 
 ## Implementation
 
-The next sections explain how to implement a GraphQL API in a service app. This example shows how to display mocked data about "live users" accessing product pages. The implementation includes creating the GraphQL schema, a [custom client](https://developers.vtex.com/docs/guides/vtex-io-documentation-how-to-create-and-use-clients), and a resolver function.
+The next sections explain how to implement a GraphQL API in a service app. This example shows how to display mocked data about live users accessing product pages. The implementation includes creating the GraphQL schema, a [custom client](https://developers.vtex.com/docs/guides/vtex-io-documentation-how-to-create-and-use-clients), and a resolver function.
 
 ### 1. Start with a template
 
